cargo_errors.log
    Checking ambidex_survival v0.1.0 (/home/tchuong/Màn hình nền/ambidex_survival)
error[E0603]: struct import `Velocity` is private
  --> src/systems/combat/sword_mechanics.rs:4:67
   |
 4 | use crate::components::weapon::{Lifetime, SwingState, SwordSwing, Velocity};
   |                                                                   ^^^^^^^^ private struct import
   |
note: the struct import `Velocity` is defined here...
  --> src/components/weapon.rs:1:32
   |
 1 | use super::physics::{Collider, Velocity};
   |                                ^^^^^^^^
note: ...and refers to the struct `Velocity` which is defined here
  --> src/components/physics.rs:89:1
   |
89 | pub struct Velocity {
   | ^^^^^^^^^^^^^^^^^^^ you could import this directly
help: import `Velocity` through the re-export
   |
 4 | use crate::components::weapon::{Lifetime, SwingState, SwordSwing, physics::Velocity};
   |                                                                   +++++++++

warning: unused import: `ExplodingProjectile`
 --> src/systems/combat/collision.rs:5:48
  |
5 | use crate::components::weapon::{AoEProjectile, ExplodingProjectile, Lifetime, Projectile};
  |                                                ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `CombatResources`
 --> src/systems/combat/weapon_logic.rs:1:32
  |
1 | use super::{CombatInputParams, CombatResources};
  |                                ^^^^^^^^^^^^^^^

warning: unused import: `spawn_bolt_explosion_visuals`
  --> src/systems/combat/weapon_logic.rs:11:5
   |
11 |     spawn_bolt_explosion_visuals, spawn_energy_bolt_visuals, spawn_global_visuals,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `WeaponType`
  --> src/systems/combat/mod.rs:20:45
   |
20 | use crate::components::weapon::{Projectile, WeaponType};
   |                                             ^^^^^^^^^^

For more information about this error, try `rustc --explain E0603`.
warning: `ambidex_survival` (bin "ambidex_survival") generated 4 warnings
error: could not compile `ambidex_survival` (bin "ambidex_survival") due to 1 previous error; 4 warnings emitted
